--- a/homework01/develop/assets/css/style.css
+++ b/homework01/develop/assets/css/style.css
@@ -4,9 +4,13 @@
   margin: 0;
 }
 
+/* Body Background Color */
+
 body {
   background-color: #d9dcd6;
 }
+
+/* Major Heading */
 
 .header {
   padding: 20px;
@@ -24,6 +28,8 @@ body {
 .header h1 .seo {
   color: #d9dcd6;
 }
+
+/* Navigation Bar */
 
 .header nav {
   padding-top: 15px;
@@ -51,6 +57,8 @@ p {
   font-size: 16px;
 }
 
+/* Background Image */
+
 .hero {
   height: 800px;
   width: 100%;
@@ -59,6 +67,8 @@ p {
   background-size: cover;
   background-position: center;
 }
+
+/* Section Image Float */
 
 .float-left {
   float: left;
@@ -70,11 +80,15 @@ p {
   margin-left: 25px;
 }
 
+/* Section Contents */
+
 .content {
   width: 75%;
   display: inline-block;
   margin-left: 20px;
 }
+
+/* Aside Contents */
 
 .benefits {
   margin-right: 20px;
@@ -102,6 +116,8 @@ p {
   color: #ffffff;
 }
 
+/* Aside Headers */
+
 .benefit-lead h3 {
   margin-bottom: 10px;
   text-align: center;
@@ -116,6 +132,8 @@ p {
   margin-bottom: 10px;
   text-align: center;
 }
+
+/* Aside Images */
 
 .benefit-lead img {
   display: block;
@@ -135,6 +153,8 @@ p {
   max-width: 150px;
 }
 
+/* Search Engine Optimization Section */
+
 .search-engine-optimization {
   margin-bottom: 20px;
   padding: 50px;
@@ -143,6 +163,8 @@ p {
   background-color: #0072bb;
   color: #ffffff;
 }
+
+/* Online Reputation Management Section */
 
 .online-reputation-management {
   margin-bottom: 20px;
@@ -153,6 +175,8 @@ p {
   color: #ffffff;
 }
 
+/* Social Media Marketing Section */
+
 .social-media-marketing {
   margin-bottom: 20px;
   padding: 50px;
@@ -161,6 +185,8 @@ p {
   background-color: #0072bb;
   color: #ffffff;
 }
+
+/* Section Images */
 
 .search-engine-optimization img {
   max-height: 200px;
@@ -173,6 +199,8 @@ p {
 .social-media-marketing img {
   max-height: 200px;
 }
+
+/* Section Headers */
 
 .search-engine-optimization h2 {
   margin-bottom: 20px;
@@ -188,6 +216,8 @@ p {
   margin-bottom: 20px;
   font-size: 36px;
 }
+
+/* Footer */
 
 .footer {
   padding: 30px;
